Closed Bug 327764 Opened 19 years ago Closed 19 years ago

SVG patterns are still not live

Categories

(Core :: SVG, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: tor)

Details

(Keywords: testcase)

Attachments

(5 files)

Same testcase as bug 308589, but easier to work around (resizing the window is sufficient) and possibly Mac-only. Steps to reproduce: 1. Load the testcase. 2. Click "remove the red rectangle from the pattern" or "turn the green rectangle yellow". Result: An alert appears, but there is no visible change to the part of the page that uses the pattern until the window is resized.
Under Windows, seeing this bug in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060219 Firefox/1.6a1.
Works, but causes a lot of compiler warnings about hidden methods due to name collisions between nsIFrame and nsIMutationObserver.
Maybe we want to have the pattern element observe itself from content land and tell the pattern frame that it has modified, instead?
Attachment #228887 - Flags: review?(bugmail)
Assignee: general → tor
Comment on attachment 228887 [details] [diff] [review] alternate approach Yeah, you don't want to make the frame an nsIMutationObserver since it is (for now) refcounted. >Index: content/svg/content/src/nsSVGPatternElement.cpp >+nsSVGPatternElement::NodeWillBeDestroyed(const nsINode *aNode) >+{ >+ RemoveMutationObserver(this); >+} No need to do this, all observers will be removed when the node dies anyway. r/sr=sicking with that fixed
Attachment #228887 - Flags: superreview+
Attachment #228887 - Flags: review?(bugmail)
Attachment #228887 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
I'm still having problems with the second testcase (Mac trunk debug). Clicking the thing to turn the green square yellow often shifts the pattern but doesn't make anything yellow.
I filed bug 372574 for the problem in comment 10.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: