Bug 327764 - make svg patterns live.  r+sr=sicking